# rust-passkeys-app

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: main.rs
static/: index.html
