[package]
name = "rust-passkey-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
uuid = "1.19.0"
webauthn-rs = "0.5.4"
